// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No value 1`] = `
<fieldset
  class="s-Fe6WNbR-55zp"
>
  <legend
    class="s-Fe6WNbR-55zp"
  >
    Please enter value
  </legend>
   
  <input
    class="s-Fe6WNbR-55zp"
  />
</fieldset>
`;

exports[`With initial value 1`] = `
<fieldset
  class="s-Fe6WNbR-55zp"
>
  <legend
    class="s-Fe6WNbR-55zp has-value"
  >
    Please enter value
  </legend>
   
  <input
    class="s-Fe6WNbR-55zp"
  />
</fieldset>
`;
